# openclaw-medical-harness

./: .env.example  .gitignore  AWESOME_MEDICAL_MCP.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SEO_GEO_STRATEGY.md  demo_server.py  deploy.sh  docker-compose.yml  index.md  pyproject.toml  requirements.txt  setup.py
.github/: labeler.yml
.github/workflows/: ci.yml
agents/: __init__.py  orchestrator.py
data/: agent-capabilities.json  agent-types.json  api-endpoints.json  deployment-configs.json  integration-protocols.json  mcp-tools.json  performance-metrics.json  pipeline-stages.json  security-policies.json  workflow-templates.json
docs/: README.md  architecture-v2.html  architecture.md  architecture_v2.md  harness-theory.html  harness_theory.md  index.html  pricing.html  robots.txt  sitemap.xml  skill-catalog.html
docs/api/: REFERENCE.md  index.html  reference.html
docs/api/REFERENCE/: index.html
docs/architecture/: index.html
docs/benchmarks/: PERFORMANCE.md  performance.html
docs/blog/: WHAT_IS_HARNESS_THEORY.md  drug-discovery-ai-agent.html  geo-seo-biopharma.html  index.html  mcp-tools-medical-ai.html  rare-disease-diagnosis-ai.html  what-is-harness-theory.html
docs/examples/: CODE_EXAMPLES.md  code-examples.html
docs/guides/: GETTING_STARTED.md  diagnosis-harness.html  drug-discovery-harness.html  getting-started.html  health-management-harness.html  index.html  model-providers.html  openpharma-integration.html
examples/: full_diagnosis.py  quickstart.py  test_mimo.py  workflow.md
harness/: __init__.py  base.py  context.py  recovery.py  validator.py
harness/diagnosis/: __init__.py  diagnostic_harness.py
harness/drug_discovery/: __init__.py  drug_harness.py
harness/health_management/: __init__.py  health_harness.py
mcp_tools/: registry.py
openclaw_medical_harness/: __init__.py  base.py  context.py  recovery.py  validator.py
openclaw_medical_harness/agents/: __init__.py  orchestrator.py
openclaw_medical_harness/diagnosis/: __init__.py  diagnostic_harness.py
openclaw_medical_harness/drug_discovery/: __init__.py  drug_harness.py
openclaw_medical_harness/health_management/: __init__.py  health_harness.py
openclaw_medical_harness/mcp_tools/: __init__.py  openpharma_bridge.py  opentargets.py  pubmed.py  registry.py
openclaw_medical_harness/providers/: __init__.py  base.py  factory.py  mimo.py
scripts/: deploy.sh
skills/: __init__.py
skills/clinical/: clinical_trial_matching.yaml  diagnostic_reasoning.yaml  drug_interaction_check.yaml
skills/drug/: admet_prediction.yaml  target_validation.yaml
skills/emergency/: emergency_triage.yaml
skills/genomics/: variant_interpretation.yaml
skills/health/: diabetes_management.yaml
skills/imaging/: imaging_report.yaml
skills/mental/: mental_health_screening.yaml
skills/oncology/: oncology_staging.yaml
skills/pediatrics/: pediatric_growth.yaml
skills/pharmacogenomics/: pharmacogenomics.yaml
skills/rare/: rare_disease_diagnosis.yaml
src/: agent_registry.py  harness_core.py  mcp_bridge.py
tests/: conftest.py  test_api.py  test_harness.py
