[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openclaw-medical-harness"
version = "0.1.0"
description = "Medical AI Agent Orchestration Framework for OpenClaw — Built on Harness Theory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "MoKangMedical"}]
keywords = ["openclaw", "medical", "ai", "harness", "agent", "diagnosis", "drug-discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: OpenClaw",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
crewai = ["crewai[tools]>=0.28.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "ruff>=0.3", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/MoKangMedical/openclaw-medical-harness"
Documentation = "https://github.com/MoKangMedical/openclaw-medical-harness#readme"
Repository = "https://github.com/MoKangMedical/openclaw-medical-harness"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
